force-app/main/default/objects/Slack_Callout_Log__c/Slack_Callout_Log__c.object-meta.xml
<CustomObject>
    <description>Stores Slack callout outcomes, status codes, errors, and retry counts for account notifications.</description>
    <label>Slack Callout Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Slack Callout Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>