force-app/main/default/objects/Slack_Callout_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Account related to the Slack notification callout.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Slack Callout Logs</relationshipLabel>
    <relationshipName>Slack_Callout_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>