force-app/main/default/objects/Slack_Callout_Log__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Final outcome of the Slack callout.</description>
    <label>Outcome</label>
    <length>20</length>
    <type>Text</type>
</CustomField>